@@ -202,3 +202,21 @@ a:hover {
     clear: both;
     left: 204px;
 }
+
+
+.user_avatar {
+    width: 192px;
+    height: 192px;
+    border: 1px;
+    border-color: black;
+    background-color: #d3d3d3;
+    float: left;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.user_info {
+    position: absolute;
+    clear: both;
+    left: 204px;
+}
